--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html lang="ko">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Title" content="Study" />
+    <meta http-equiv="Author" content="Ho.." />
+    <meta name="Description" content="안녕하세요, 100찾기 게임입니다.." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>100찾기</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
