--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
+
 <head>
-<html lang="ko">
+    <html lang="ko">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Title" content="Study" />
@@ -10,7 +11,17 @@
     <title>100찾기</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
+    <div class="header">
+        <div class="timer">
+            <span class="min"></span>
+            <span class="sec"></span>
+        </div>
+        <div class="today">
+            <span class="today-text"></span>
+        </div>
+    </div>
     <div class="container">
         <h1>100 찾기 게임</h1>
         <span class="random-num"></span>
@@ -18,4 +29,5 @@
     </div>
     <script src="./set.js"></script>
 </body>
+
 </html>
